--- a/package.json
+++ b/package.json
@@ -1,93 +1,94 @@
 {
-    "name": "next-hono-lucia",
-    "version": "1.0.0",
-    "private": true,
-    "license": "MIT",
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "test": "echo 'No tests found.'",
-        "start": "next start",
-        "lint": "next lint --fix",
-        "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,mdx}\"",
-        "db:generate": "dotenv -c pnpm drizzle-kit generate",
-        "db:migrate": "dotenv -c pnpm drizzle-kit migrate",
-        "db:studio": "dotenv -c pnpm drizzle-kit studio"
-    },
-    "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a",
-    "dependencies": {
-        "@hono/zod-openapi": "^0.14.5",
-        "@hookform/error-message": "^2.0.1",
-        "@hookform/resolvers": "^3.6.0",
-        "@lucia-auth/adapter-drizzle": "^1.0.7",
-        "@node-rs/argon2": "^1.8.3",
-        "@node-rs/bcrypt": "^1.10.4",
-        "@radix-ui/react-checkbox": "^1.1.0",
-        "@radix-ui/react-dropdown-menu": "^2.1.1",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-slot": "^1.1.0",
-        "@radix-ui/react-toast": "^1.2.1",
-        "@react-email/components": "^0.0.19",
-        "@react-email/render": "^0.0.15",
-        "@scalar/hono-api-reference": "^0.5.80",
-        "@t3-oss/env-nextjs": "^0.10.1",
-        "@tanstack/react-query": "^5.48.0",
-        "@tanstack/react-query-devtools": "^5.48.0",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "drizzle-orm": "^0.31.2",
-        "hono": "4.4.8",
-        "input-otp": "^1.2.4",
-        "lucia": "^3.2.0",
-        "lucide-react": "^0.397.0",
-        "next": "14.2.4",
-        "next-themes": "^0.3.0",
-        "nodemailer": "^6.9.14",
-        "ofetch": "^1.3.4",
-        "oslo": "^1.2.1",
-        "postgres": "^3.4.4",
-        "query-string": "^9.0.0",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "react-email": "^2.1.4",
-        "react-hook-form": "^7.52.0",
-        "resend": "^3.4.0",
-        "server-only": "^0.0.1",
-        "sonner": "^1.5.0",
-        "tailwind-merge": "^2.3.0",
-        "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
-        "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/forms": "^0.5.7",
-        "@tailwindcss/typography": "^0.5.13",
-        "@tanstack/eslint-plugin-query": "^5.47.0",
-        "@total-typescript/ts-reset": "^0.5.1",
-        "@types/node": "^20.14.9",
-        "@types/nodemailer": "^6.4.15",
-        "@types/pg": "^8.11.6",
-        "@types/react": "^18.3.3",
-        "@types/react-dom": "^18.3.0",
-        "@typescript-eslint/eslint-plugin": "^7.14.1",
-        "@typescript-eslint/parser": "^7.14.1",
-        "autoprefixer": "^10.4.19",
-        "cssnano": "^7.0.3",
-        "dotenv-cli": "^7.4.2",
-        "drizzle-kit": "^0.22.7",
-        "eslint": "^8.57.0",
-        "eslint-config-next": "14.2.4",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-tailwindcss": "^3.17.4",
-        "eslint-plugin-unused-imports": "^3.2.0",
-        "jiti": "^1.21.6",
-        "pg": "^8.12.0",
-        "postcss": "^8.4.38",
-        "prettier": "^3.3.2",
-        "prettier-plugin-tailwindcss": "^0.6.5",
-        "tailwindcss": "^3.4.4",
-        "tailwindcss-debug-screens": "^2.2.1",
-        "typescript": "^5.5.2"
-    }
+  "name": "next-hono-lucia",
+  "version": "1.0.0",
+  "private": true,
+  "license": "MIT",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "test": "echo 'No tests found.'",
+    "start": "next start",
+    "lint": "next lint --fix",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,md,mdx}\"",
+    "db:generate": "dotenv -c pnpm drizzle-kit generate",
+    "db:migrate": "dotenv -c pnpm drizzle-kit migrate",
+    "db:studio": "dotenv -c pnpm drizzle-kit studio"
+  },
+  "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a",
+  "dependencies": {
+    "@hono/zod-openapi": "^0.14.5",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.6.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@node-rs/argon2": "^1.8.3",
+    "@node-rs/bcrypt": "^1.10.4",
+    "@radix-ui/react-checkbox": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@react-email/components": "^0.0.19",
+    "@react-email/render": "^0.0.15",
+    "@scalar/hono-api-reference": "^0.5.80",
+    "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.48.0",
+    "@tanstack/react-query-devtools": "^5.48.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.31.2",
+    "framer-motion": "^11.3.19",
+    "hono": "4.4.8",
+    "input-otp": "^1.2.4",
+    "lucia": "^3.2.0",
+    "lucide-react": "^0.397.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
+    "ofetch": "^1.3.4",
+    "oslo": "^1.2.1",
+    "postgres": "^3.4.4",
+    "query-string": "^9.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-email": "^2.1.4",
+    "react-hook-form": "^7.52.0",
+    "resend": "^3.4.0",
+    "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "@tanstack/eslint-plugin-query": "^5.47.0",
+    "@total-typescript/ts-reset": "^0.5.1",
+    "@types/node": "^20.14.9",
+    "@types/nodemailer": "^6.4.15",
+    "@types/pg": "^8.11.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.3",
+    "dotenv-cli": "^7.4.2",
+    "drizzle-kit": "^0.22.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-unused-imports": "^3.2.0",
+    "jiti": "^1.21.6",
+    "pg": "^8.12.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "tailwindcss": "^3.4.4",
+    "tailwindcss-debug-screens": "^2.2.1",
+    "typescript": "^5.5.2"
+  }
 }
